fix: adjust vert & horiz spacing

--- a/assets/sass/vha/pages/home/sss-greenhouse-fundamentals/_index.scss
+++ b/assets/sass/vha/pages/home/sss-greenhouse-fundamentals/_index.scss
@@ -4,11 +4,20 @@
     border-radius: 8px !important;
     background: #FFF !important;
     box-shadow: 0px 10px 32px 0px rgba(0, 0, 0, 0.20) !important;
+    margin-left: 0;
+    margin-right: 0;
+}
 
-}.usa-card__header {
+.usa-card__header {
     padding: 0;
 }
 
 .usa-card__footer {
     padding: .5rem 1.5rem 0 1.5rem;
+}
+
+@include at-media(tablet-lg) {
+    .usa-card:last-child {
+        margin-bottom: 0;
+    }
 }
